opensearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-ingress
  namespace: opensearch
spec:
  rules:
    - host: 139.59.206.20
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-lb
                port:
                  number: 9200
